# kira-audio

./: Cargo.toml  changelog.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: clippy.yml  run-tests.yml
conductor/: Cargo.toml
conductor-lua-test/: main.lua
conductor-lua/src/: event.rs  manager.rs  sequence.rs
conductor-test/src/: main.rs
conductor/benches/: benchmark.rs
conductor/src/: backend.rs  command.rs  error.rs  frame.rs  instance.rs  lib.rs  sequence.rs  sound.rs  sound_bank.rs  tag.rs
crates/kira/: Cargo.toml
crates/kira/src/: lib.rs  sound.rs
kira/: all.html  enum.Duration.html  enum.Event.html  enum.KiraError.html  enum.Value.html  index.html  sidebar-items.js  struct.MetronomeSettings.html  struct.ParameterId.html  struct.StereoSample.html  struct.Tempo.html  struct.Tween.html  type.KiraResult.html
kira/duration/: enum.Duration.html
kira/error/: enum.KiraError.html  type.KiraResult.html
kira/event/: enum.Event.html
kira/instance/: enum.InstanceTrackIndex.html  enum.LoopPoint.html  index.html  sidebar-items.js  struct.InstanceId.html  struct.InstanceSettings.html  struct.LoopRegion.html
kira/manager/: enum.Event.html  index.html  sidebar-items.js  struct.AudioManager.html  struct.AudioManagerSettings.html
kira/metronome/: struct.MetronomeSettings.html
kira/mixer/: enum.TrackIndex.html  index.html  sidebar-items.js  struct.SubTrackId.html  struct.TrackSettings.html
kira/parameter/: index.html  sidebar-items.js  struct.ParameterId.html  struct.Tween.html
kira/sequence/: index.html  sidebar-items.js  struct.Sequence.html  struct.SequenceId.html
kira/sound/: index.html  sidebar-items.js  struct.Sound.html  struct.SoundId.html  struct.SoundMetadata.html  struct.SoundSettings.html
kira/stereo_sample/: struct.StereoSample.html
kira/tempo/: struct.Tempo.html
kira/track/: enum.TrackIndex.html  index.html  sidebar-items.js  struct.SubTrackId.html  struct.TrackSettings.html
kira/tween/: struct.Tween.html
kira/value/: enum.Value.html
src/kira/: command.rs.html  (+12 more)
(+79 files in other folders)
